# colabgame

./: .gitignore  README.md  clemgame.json  master.py  model_registry.json  pyproject.toml  requirements.txt  scorer.py  setup_osworld.sh
in/: instances.json  instances_backup.json  instances_backup1.json  instances_v1.1.0.json  osworld_subset.json
resources/: config.yaml
resources/prompts/: blackboard_topology_participant_w_execute_prompt.j2  blackboard_topology_participant_wo_execute_prompt.j2  mesh_topology_participant_w_execute_prompt.j2  mesh_topology_participant_wo_execute_prompt.j2  single_topology_executor_prompt.j2  star_topology_hub_prompt.j2  star_topology_spoke_w_execute_prompt.j2  star_topology_spoke_wo_execute_prompt.j2
resources/topologies/: blackboard_topology.yaml  mesh_topology.yaml  single_topology.yaml  star_topology.yaml
src/: environment.py  instancegenerator.py  master.py  message.py  player.py
src/tasks/: __init__.py
src/tasks/categories/base/: __init__.py  base_category.py  base_task.py  category_interface.py  provider_interfaces.py
src/tasks/categories/debugging_and_refactoring/: __init__.py  category.py  evaluators.py  providers.py  setup_config.py
src/tasks/categories/debugging_and_refactoring/tasks/: __init__.py  base_task.py  level1_tasks.py  level2_tasks.py  level3_tasks.py
src/tasks/categories/image_processing/: __init__.py  category.py  evaluators.py  providers.py  setup_config.py
src/tasks/categories/image_processing/tasks/: __init__.py  base_task.py  level1_tasks.py  level2_tasks.py  level3_tasks.py
src/tasks/categories/research_synthesis/: __init__.py  category.py  enhanced_content_generator.py  evaluators.py  providers.py  setup_config.py
src/tasks/categories/research_synthesis/tasks/: __init__.py  base_task.py  level1_tasks.py  level2_tasks.py  level3_tasks.py
src/tasks/categories/tabular_data_reporting/: __init__.py  category.py  evaluators.py  providers.py  setup_config.py
src/tasks/categories/tabular_data_reporting/tasks/: __init__.py  base_task.py  level1_tasks.py  level2_tasks.py  level3_tasks.py
src/tasks/categories/workflow_orchestration/: __init__.py  category.py  enhanced_content_generator.py  evaluators.py  providers.py  setup_config.py
src/tasks/categories/workflow_orchestration/tasks/: __init__.py  base_task.py  level1_tasks.py
src/tasks/core/: __init__.py  category_registry.py  config_builder.py  file_manager.py  generator.py  task_sampling.py  utils.py
src/topologies/: __init__.py  base.py  blackboard.py  factory.py  mesh.py  single.py  star.py
src/utils/: blackboard_manager.py  constants.py  domain_manager.py  image_manager.py  osworld.py  s3_manager.py  template_manager.py
src/utils/registry/: base.py  parsers.py  processors.py
